--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,7 +276,7 @@ blockquote {
         font-size: 0.9rem;
         color: #666;
     }
-    .post-title { font-size: 3rem; margin: 0; line-height: 1.15; }
+    .post-title { font-size: 1.15rem; font-weight: 700; margin: 0; color: var(--accent-color); line-height: 1.15; }
     .post-description { color: #444; flex: 1; margin-left: 0; }
 }
 
