--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,7 +52,7 @@ layout: default
 
 
     <header>
-        <h1 class="post-title">{{ page.title }}</h1>
+        <h1>{{ page.title }}</h1>
         {% if page.subtitle %}
         <div style="font-style: italic; color: #555; border-bottom: 1px solid #e0e0e0; padding-bottom: 20px; margin-bottom: 40px;">
             {{ page.date | date: "%B %d, %Y" }} • {{ page.subtitle }}
