--- a/_layouts/tmx_viewer.html
+++ b/_layouts/tmx_viewer.html
@@ -10,7 +10,7 @@ layout: default
     <div class="badge-wrap">
         <span class="badge badge-parallel">Parallel Text</span>
     </div>
-    <h1 class="post-title">{{ page.title }}</h1>
+    <h1>{{ page.title }}</h1>
     
     {% if page.subtitle %}
         <p class="post-meta">{{ page.date | date: "%d %B %Y" }} • {{ page.subtitle }}</p>
