--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,8 @@ layout: default
 ---
 <article class="post-container">
 
-    <div style="margin-bottom: 40px; font-family: sans-serif; text-transform: uppercase; font-size: 0.8rem; letter-spacing: 1px;">
-        <a href="{{ '/' | relative_url }}" style="text-decoration: none; color: #8b0000;">&larr; Back to Archive</a>
+    <div class="back-to-archive">
+        <a class="back-link" href="{{ '/' | relative_url }}">&larr; Back to Archive</a>
     </div>
 
 {% assign show_transcript = false %}
