--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -117,7 +117,7 @@ layout: default
 
             {% if viewer_target %}
                 <a href="{{ '/tmx_viewer/' | relative_url }}?file={{ viewer_target }}" target="_blank" class="viewer-btn">
-                    👁️ Open Parallel Viewer
+                    ↔️	Side-by-side
                 </a>
             {% endif %}
 
