--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -54,8 +54,8 @@ layout: default
     <header>
         <h1>{{ page.title }}</h1>
         {% if page.subtitle %}
-        <div style="font-style: italic; color: #555; border-bottom: 1px solid #e0e0e0; padding-bottom: 20px; margin-bottom: 40px;">
-            {{ page.date | date: "%B %d, %Y" }} • {{ page.subtitle }}
+        <div class="post-meta">
+            {{ page.subtitle }}
         </div>
         {% endif %}
 
@@ -151,11 +151,11 @@ layout: default
         {{ content }}
     </div>
 
-    <hr class="fencing-divider" style="margin: 3rem 0; border: 0; border-top: 1px solid #eee;">
+    <hr class="fencing-divider">
     {% include version_links.html %}
 
     {% if page.author %}
-    <div style="text-align: right; margin-top: 60px; font-weight: bold; text-transform: uppercase; letter-spacing: 1px;">
+    <div class="post-author">
         {{ page.author }}
     </div>
     {% endif %}
