--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,5 +10,9 @@
     <div class="post-content">
         {{ content }}
     </div>
+    
+    <div class="site-title-footer">
+        {{ site.title }}
+    </div>
 </body>
 </html>
