--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -154,10 +154,10 @@ layout: default
     <hr class="fencing-divider">
     {% include version_links.html %}
 
-    {% if page.author %}
+    <!-- {% if page.author %}
     <div class="post-author">
         {{ page.author }}
     </div>
-    {% endif %}
+    {% endif %} -->
 
 </article>
