--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -154,6 +154,10 @@ layout: default
     <hr class="fencing-divider">
     {% include version_links.html %}
 
+    <div class="site-title-footer">
+        {{ site.title }}
+    </div>
+
     <!-- {% if page.author %}
     <div class="post-author">
         {{ page.author }}
