--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <article class="post-container">
 
     <div class="back-to-archive">
-        <a class="back-link" href="{{ '/' | relative_url }}">&larr; Back to Archive</a>
+        <a class="back-link" href="{{ '/' | relative_url }}">&larr; Back to Archives</a>
     </div>
 
 {% assign show_transcript = false %}
