--- a/_layouts/tmx_viewer.html
+++ b/_layouts/tmx_viewer.html
@@ -4,7 +4,7 @@ layout: default
 <article class="post-container tmx-viewer">
 
     <div class="back-nav">
-        <a href="{{ '/' | relative_url }}">&larr; Back to Archive</a>
+        <a href="{{ '/' | relative_url }}">&larr; Back to Archives</a>
     </div>
 
     <div class="badge-wrap">
