--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,13 +210,18 @@ img {
     border: 1px solid #ddd;
     filter: sepia(0.15) contrast(1.05);
 }
-em, figcaption {
+figcaption {
     display: block;
     text-align: center;
     font-size: 0.95rem;
     color: #666;
     font-style: italic;
     margin-bottom: 2rem;
+}
+em {
+    font-size: 0.95rem;
+    color: #666;
+    font-style: italic;
 }
 blockquote {
     font-size: 1.2rem;
