--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -116,8 +116,8 @@ layout: default
             <strong class="source-label">Related Files:</strong>
 
             {% if viewer_target %}
-                <a href="{{ '/tmx_viewer/' | relative_url }}?file={{ viewer_target }}" target="_blank" class="viewer-btn">
-                    ↔️	Side-by-Side
+                <a href="{{ '/tmx_viewer/' | relative_url }}?file={{ viewer_target }}&return_url={{ page.url | url_encode }}" target="_blank" class="viewer-btn">
+                    ↔️ Side-by-Side
                 </a>
             {% endif %}
 
